# loni-pd-ai

./: .gitignore  README.md  pyproject.toml
docs/: PLAN.md
src/litscout/: __init__.py  __main__.py  cli.py  config.py  expand.py  extract.py  ingest.py  models.py  rank.py  report.py  retrieve.py  search.py
src/litscout/api_clients/: openalex.py  pubmed.py  semantic_scholar.py  unpaywall.py
src/litscout/utils/: dedup.py  identifiers.py  io.py  rate_limiter.py
tests/: conftest.py  test_config.py  test_dedup.py  test_identifiers.py  test_io.py  test_models.py  test_rate_limiter.py  test_report.py
